Fix slide overflow issue.

--- a/src/remark.less
+++ b/src/remark.less
@@ -7,20 +7,18 @@ html, body {
 
 #slideshow {
   background: #fff;
+  overflow: hidden;
   position: absolute;
   -webkit-transform-origin: top left;
   -moz-transform-origin: top left;
   transform-origin: top-left;
+  -moz-box-shadow: 0 0 30px #888;
+  -webkit-box-shadow: 0 0 30px #888;
+  box-shadow: 0 0 30px #888;
 
   .slide {
-    display: table;
-    float: left;
     height: 100%;
-    overflow: hidden;
     width: 100%;
-    -moz-box-shadow: 0 0 30px #888;
-    -webkit-box-shadow: 0 0 30px #888;
-    box-shadow: 0 0 30px #888;
 
     > .center {
       text-align: center;
